<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.fiap.vivo.view.SecondFragment">

        <TextView
            android:id="@+id/loginPageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_page_title"
            android:layout_marginTop="60dp"
            style="@style/default.layout.title"/>

        <TextView
            android:id="@+id/loginPageWelcomeText"
            android:layout_below="@+id/loginPageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            style="@style/default.layout.title"/>

        <TextView
            android:id="@+id/loginPageEmailLabel"
            android:layout_below="@+id/loginPageWelcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_page_email"
            style="@style/default.layout.text"/>

        <EditText
            android:id="@+id/loginPageEmailField"
            android:layout_below="@+id/loginPageEmailLabel"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:inputType="textEmailAddress"
            style="@style/default.layout.field"/>

        <TextView
            android:id="@+id/loginPagePasswordLabel"
            android:layout_below="@+id/loginPageEmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_page_password"
            style="@style/default.layout.text"/>

        <EditText
            android:id="@+id/loginPagePasswordField"
            android:layout_below="@+id/loginPagePasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:inputType="textPassword"
            style="@style/default.layout.field"/>

        <Button
            android:id="@+id/loginPageSaveButton"
            android:layout_below="@id/loginPagePasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_page_login"
            style="@style/default.layout.button.primary"/>
    </LinearLayout>
</ScrollView>