...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_page_name"
            style="@style/default.layout.text"/>

        <EditText
            android:id="@+id/registrationNameField"
            android:layout_below="@id/registrationNameLabel"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            tools:ignore="TouchTargetSizeCheck"
            style="@style/default.layout.field"/>

...
