...
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.fiap.vivo.view.FourthFragment">

        <TextView
            android:id="@+id/dashboardPageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_page_welcome_title"
            android:layout_marginTop="60dp"
            style="@style/default.layout.title"/>

...
